--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <button onclick="getLocation()">Show my location in google maps</button>
-    <h1 id="notValid"></h1>
+    <h1 id="notValid">..</h1>
 
     <script src="app.js"></script>
 
